<resources>
    <string name="app_name">Sembang</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_chatting_now">Start Chatting Now</string>
    <string name="your_email_is_wrong">Your email is wrong!</string>
    <string name="create_strong_password">Create Strong Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="register_your_account_now">Register Your Account Now</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="username">Username</string>
    <string name="next">next</string>
    <string name="create_by_farez">create by Farez</string>
    <string name="global_chat">Global Chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="_11_11_am">11:11 AM</string>
    <string name="back">back</string>
    <string name="check_your_email_for_verification_link">Check your email for verification link</string>
    <string name="search_a_user">Search a user</string>
    <string name="this_page_will_update_in_the_future">This page will update in the future!</string>
    <string name="back_to_main_screen">back to main screen</string>
    <string name="screening_chat">Screening chat</string>
    <string name="go_to_sembang_github_page">go to Sembang github page</string>
    <string name="or">OR</string>
</resources>