<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".SettingActivity">

    <TextView
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/this_page_will_update_in_the_future"
        />

    <Button
        android:id="@+id/button_github"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@id/button_register"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_15dp"
        android:backgroundTint="#2A7888"
        android:text="@string/go_to_sembang_github_page"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginBottom="-5dp"
        android:layout_above="@id/button_register"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:text="@string/or"
        />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_15dp"
        android:backgroundTint="@color/bluish"
        android:text="@string/back_to_main_screen"
        android:textColor="@color/white" />

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="140dp"
        android:text="@string/create_by_farez"
        android:textAlignment="textEnd"
        android:textSize="17sp"
        android:layout_margin="15dp"
        android:layout_height="23dp"/>

</RelativeLayout>