<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2832"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/register_your_account_now"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/round_15dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textColorHint="#787878"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_error_email"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/edit_email"
        android:layout_alignStart="@id/edit_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_error_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_15dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textColorHint="#787878"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_error_username"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/edit_username"
        android:layout_alignStart="@id/edit_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_error_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_15dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#787878"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_error_password"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/edit_password"
        android:layout_alignStart="@id/edit_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/edit_password_confirm"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_error_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_15dp"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#787878"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_error_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/edit_password_confirm"
        android:layout_alignStart="@id/edit_password_confirm"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />


    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_15dp"
        android:backgroundTint="@color/bluish"
        android:text="@string/register" />

</RelativeLayout>