<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2832"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/register_your_account_now"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/round_15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_error_email"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/edit_email"
        android:layout_alignStart="@id/edit_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />

    <RelativeLayout
        android:id="@+id/layout_verify"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_error_email"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edit_verify"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="@drawable/round_15dp"
            android:hint="@string/code"
            android:inputType="numberPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:importantForAutofill="no" />

        <ImageButton
            android:src="@drawable/icon_check"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:background="@drawable/round_20dp"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_error_verify"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/layout_verify"
        android:layout_alignStart="@id/layout_verify"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_error_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_15dp"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/text_error_username"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/edit_username"
        android:layout_alignStart="@id/edit_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        />


    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_15dp"
        android:backgroundTint="@color/bluish"
        android:text="@string/next" />

</RelativeLayout>